--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,8 +20,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/home" routerLinkActive="active" class="nav-link">
-            Editar Clientes
+          <a routerLink="/clientes/cadastro" routerLinkActive="active" class="nav-link">
+            Cadastro de Clientes
           </a>
         </li>
         <li class="nav-item dropdown">
