--- a/src/app/pages/create-update-client/create-client.component.html
+++ b/src/app/pages/create-update-client/create-client.component.html
@@ -1,7 +1,7 @@
 <h1 class="display-6">{{ clientCPF ? 'Editar' : 'Cadastrar' }}</h1>
 <hr />
 
-<form [formGroup]="clientForm" (ngSubmit)="create()">
+<form [formGroup]="clientForm">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputName" class="form-label">Nome:</label>
@@ -11,7 +11,7 @@
     <div class="form-group col-md-6">
       <label for="inputCPF">CPF:</label>
       <input type="text" class="form-control" id="inputCPF" formControlName="inputCPF" placeholder="00000000000">
-    </div>{{ clientCPF ? 'Editar' : 'Cadastrar' }}
+    </div>
     </div>
 
     <div class="form-group col-md-6">
