--- a/src/app/pages/table-clients/table-clients.component.html
+++ b/src/app/pages/table-clients/table-clients.component.html
@@ -22,8 +22,7 @@
     <td>{{client.salario | currency: 'BRL'}}</td>
     <td>
       <button type="button" class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}">Editar</button>
-      <button type="button" class="btn btn-danger btn-sm ms-1">Remover</button>
-    </td>
+      <button type="button" class="btn btn-danger btn-sm ms-1" (click)="deleteClient(client.CPF)">Excluir</button>
   </tr>
   </tbody>
 </table>
