--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,35 +2,35 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="https://placeholder.pics/svg/150x50/888888/EEE/Logo" alt="..." height="36">
+      <img alt="..." height="36" src="https://placeholder.pics/svg/150x50/888888/EEE/Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a routerLink="/home" routerLinkActive="active" class="nav-link">
+          <a class="nav-link" routerLink="/home" routerLinkActive="active">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/clientes/lista" routerLinkActive="active" class="nav-link">
+          <a class="nav-link" routerLink="/clientes/lista" routerLinkActive="active">
             Listar Clientes
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/clientes/cadastro" routerLinkActive="active" class="nav-link">
+          <a class="nav-link" routerLink="/clientes/cadastro" routerLinkActive="active">
             Cadastro de Clientes
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-             aria-expanded="false">
+          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown"
+             role="button">
             Dropdown
           </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <ul aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li>
