--- a/src/app/pages/table-clients/table-clients.component.html
+++ b/src/app/pages/table-clients/table-clients.component.html
@@ -21,8 +21,8 @@
     <td>{{client.CEP}}</td>
     <td>{{client.salario | currency: 'BRL'}}</td>
     <td>
-      <button type="button" class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}">Editar</button>
-      <button type="button" class="btn btn-danger btn-sm ms-1" (click)="deleteClient(client.CPF)">Excluir</button>
+      <button class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}" type="button">Editar</button>
+      <button (click)="deleteClient(client.CPF)" class="btn btn-danger btn-sm ms-1" type="button">Excluir</button>
   </tr>
   </tbody>
 </table>
