refactor: home component struct

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="home-container">
+  <h1>Bem-vinda(o) ao sistema de cadastro de clientes</h1>
+  <p>Utilize o menu abaixo para navegar pelo site</p>
+  <div>
+    <button class="btn btn-primary" routerLink="/clientes/lista">Listar Clientes</button>
+    <button class="btn btn-primary" routerLink="/clientes/cadastro">Cadastrar Clientes</button>
+  </div>
+</div>
