--- a/src/app/pages/table-clients/table-clients.component.html
+++ b/src/app/pages/table-clients/table-clients.component.html
@@ -1,28 +1,30 @@
-<table class="table table-striped table-hove">
-  <thead>
-  <tr>
-    <th scope="col">CPF</th>
-    <th scope="col">Nome</th>
-    <th scope="col">Telefone</th>
-    <th scope="col">Rua</th>
-    <th scope="col">Número</th>
-    <th scope="col">CEP</th>
-    <th scope="col">Rendimento Mensal</th>
-    <th scope="col">Ações</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let client of clients">
-    <th scope="row">{{client.CPF | cpf }}</th>
-    <td>{{client.nome}}</td>
-    <td>{{client.telefone | telephone }}</td>
-    <td>{{client.rua}}</td>
-    <td>{{client.numero}}</td>
-    <td>{{client.CEP}}</td>
-    <td>{{client.salario | currency: 'BRL'}}</td>
-    <td>
-      <button class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}" type="button">Editar</button>
-      <button (click)="deleteClient(client.CPF)" class="btn btn-danger btn-sm ms-1" type="button">Excluir</button>
-  </tr>
-  </tbody>
-</table>
+<div class=client-table>
+  <table class="table table-striped table-hove">
+    <thead>
+    <tr>
+      <th scope="col">CPF</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Telefone</th>
+      <th scope="col">Rua</th>
+      <th scope="col">Número</th>
+      <th scope="col">CEP</th>
+      <th scope="col">Rendimento Mensal</th>
+      <th scope="col">Ações</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let client of clients">
+      <th scope="row">{{client.CPF | cpf }}</th>
+      <td>{{client.nome}}</td>
+      <td>{{client.telefone | telephone }}</td>
+      <td>{{client.rua}}</td>
+      <td>{{client.numero}}</td>
+      <td>{{client.CEP}}</td>
+      <td>{{client.salario | currency: 'BRL'}}</td>
+      <td>
+        <button class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}" type="button">Editar</button>
+        <button (click)="deleteClient(client.CPF)" class="btn btn-danger btn-sm ms-1" type="button">Excluir</button>
+    </tr>
+    </tbody>
+  </table>
+</div>
