refactor: move folder

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
-      <img alt="..." height="36" src="https://angular.io/assets/images/logos/angular/angular.svg" width="36">
+    <a class="navbar-brand" routerLink="/home">
+      <img alt="Angular logo" height="36" ngSrc="https://angular.io/assets/images/logos/angular/angular.svg" width="36">
     </a>
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
             class="navbar-toggler"
