--- a/src/app/pages/table-clients/table-clients.component.html
+++ b/src/app/pages/table-clients/table-clients.component.html
@@ -22,7 +22,7 @@
       <td>{{client.CEP}}</td>
       <td>{{client.salario | currency: 'BRL'}}</td>
       <td>
-        <button class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}" type="button">Editar</button>
+        <button class="btn btn-dark btn-sm" routerLink="/clientes/cadastro/{{client.CPF}}" type="button">Atualizar</button>
         <button (click)="deleteClient(client.CPF)" class="btn btn-danger btn-sm ms-1" type="button">Excluir</button>
     </tr>
     </tbody>
