--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,14 +3,14 @@
     <p>
       <a href="mailto:anderson.higo2@gmail.com" target="_blank">
         <img alt="Gmail"
-             ngSrc="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
+             src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
       <a href="https://www.linkedin.com/in/andersonhsporto/" target="_blank">
         <img alt="LinkedIn"
-             ngSrc="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"/>
+             src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"/>
       </a>
       <a href="https://www.github.com/andersonhsporto" target="_blank">
-        <img alt="GitHub"
-             ngSrc="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"/></a>
+        <img alt="Github"
+             src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"/></a>
     </p>
   </div>
 </footer>
