--- a/src/app/pages/table-clients/table-clients.component.html
+++ b/src/app/pages/table-clients/table-clients.component.html
@@ -1,5 +1,8 @@
 <div class=client-table>
-  <table class="table table-striped table-hove">
+<!--  table description-->
+  <div class="d-flex justify-content-between">
+  <table class="table table-striped table-hover">
+    <caption>Lista de Clientes</caption>
     <thead>
     <tr>
       <th scope="col">CPF</th>
@@ -27,4 +30,5 @@
     </tr>
     </tbody>
   </table>
+</div>
 </div>
